[gd_scene load_steps=34 format=3 uid="uid://cpnignvwyuiu3"]

[ext_resource type="Texture2D" uid="uid://cdjt4ngt43w1x" path="res://Sprites/Locations/Attic/Attic.png" id="1_h7jfj"]
[ext_resource type="Script" path="res://Scene/Locations/attic.gd" id="1_u72nk"]
[ext_resource type="Texture2D" uid="uid://c5ckhjiae0kus" path="res://Sprites/Aran/Aran_death.png" id="2_nt0x5"]
[ext_resource type="Texture2D" uid="uid://bw0wtaunbmusw" path="res://Sprites/Locations/Attic/Rack.png" id="3_ijydr"]
[ext_resource type="Texture2D" uid="uid://gtojbeo0c44w" path="res://Sprites/Locations/Attic/Table_attic.png" id="4_8sovf"]
[ext_resource type="PackedScene" uid="uid://bna2rf6c6f8x" path="res://Scene/Items/bottle_yelow.tscn" id="6_7jqs8"]
[ext_resource type="Texture2D" uid="uid://cy888o8fsu5rh" path="res://Sprites/Portal/Portal_1.png" id="7_l4sr5"]
[ext_resource type="Texture2D" uid="uid://dfskxs303a5g4" path="res://Sprites/Portal/Portal_2.png" id="8_76ac3"]
[ext_resource type="Texture2D" uid="uid://h77d7iuj6051" path="res://Sprites/Portal/Portal_3.png" id="9_w1rw8"]
[ext_resource type="Texture2D" uid="uid://c84u2v14yxg4v" path="res://Sprites/Portal/Portal_4.png" id="10_yg8yk"]
[ext_resource type="Texture2D" uid="uid://b412sj7fd2rko" path="res://Sprites/Portal/Portal_5.png" id="11_obe8g"]
[ext_resource type="Texture2D" uid="uid://c7puxligpfjmi" path="res://Sprites/Portal/Portal_6.png" id="12_nvat6"]
[ext_resource type="Texture2D" uid="uid://db08wvd8sr2dl" path="res://Sprites/Portal/Portal_7.png" id="13_7a8m3"]
[ext_resource type="Texture2D" uid="uid://cpm6s5jag53qr" path="res://Sprites/Portal/Portal_8.png" id="14_wfx6g"]
[ext_resource type="AudioStream" uid="uid://bxs611115d27v" path="res://Sounds/Portal.mp3" id="15_fr2ct"]

[sub_resource type="SpriteFrames" id="SpriteFrames_id1wx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_l4sr5")
}, {
"duration": 1.0,
"texture": ExtResource("8_76ac3")
}, {
"duration": 1.0,
"texture": ExtResource("9_w1rw8")
}, {
"duration": 1.0,
"texture": ExtResource("10_yg8yk")
}, {
"duration": 1.0,
"texture": ExtResource("11_obe8g")
}, {
"duration": 1.0,
"texture": ExtResource("12_nvat6")
}, {
"duration": 1.0,
"texture": ExtResource("13_7a8m3")
}, {
"duration": 1.0,
"texture": ExtResource("14_wfx6g")
}],
"loop": true,
"name": &"default",
"speed": 16.0
}]

[sub_resource type="Animation" id="Animation_hh001"]
resource_name = "portal_on"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0.01, 0.01), Vector2(0.9, 0.9), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_681m2"]
_data = {
"portal_on": SubResource("Animation_hh001")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3k3q3"]
size = Vector2(588, 20)

[sub_resource type="CircleShape2D" id="CircleShape2D_4xa3f"]
radius = 85.8662

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vmetm"]
size = Vector2(71.9088, 51.8872)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kj35l"]
size = Vector2(164.642, 51.8872)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ig0e"]
size = Vector2(826.44, 51.8872)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_erfoy"]
size = Vector2(149.587, 93.3719)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfvlm"]
size = Vector2(482.269, 41.5296)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c5iy0"]
size = Vector2(261.925, 75.5935)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4mwk4"]
size = Vector2(817.358, 71.3406)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hinx2"]
size = Vector2(296.987, 45.9178)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w7uxn"]
size = Vector2(290.788, 171.079)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_blwbo"]
size = Vector2(290.788, 171.079)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o616a"]
size = Vector2(288.092, 174.11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mcfm"]
size = Vector2(79.2295, 139.034)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwt42"]
size = Vector2(82.3283, 122.63)

[node name="Attic" type="StaticBody2D" groups=["Attic"]]
collision_mask = 2
script = ExtResource("1_u72nk")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1229.0
offset_top = -701.0
offset_right = 1135.0
offset_bottom = 692.0
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Attic" type="Sprite2D" parent="."]
texture = ExtResource("1_h7jfj")

[node name="AranDeath" type="Sprite2D" parent="."]
unique_name_in_owner = true
modulate = Color(0.882353, 0.905882, 0.862745, 1)
position = Vector2(211, -12)
scale = Vector2(0.54, 0.54)
texture = ExtResource("2_nt0x5")

[node name="TableAttic" type="Sprite2D" parent="."]
position = Vector2(-330, 69)
texture = ExtResource("4_8sovf")

[node name="Bottle_yelow" parent="." instance=ExtResource("6_7jqs8")]
position = Vector2(107, 35)

[node name="Rack" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(233, 286)
texture = ExtResource("3_ijydr")

[node name="Portal" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(-118, -105)
scale = Vector2(0.01, 0.01)
sprite_frames = SubResource("SpriteFrames_id1wx")
autoplay = "default"
frame_progress = 0.969467
flip_h = true

[node name="Animation_portal" type="AnimationPlayer" parent="Portal"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_681m2")
}

[node name="Audio_portal" type="AudioStreamPlayer" parent="Portal"]
unique_name_in_owner = true
stream = ExtResource("15_fr2ct")
volume_db = -10.0

[node name="ColorRect2" type="ColorRect" parent="."]
z_index = 1
offset_left = -622.0
offset_top = 542.0
offset_right = 389.0
offset_bottom = 763.0
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(413, 102)
rotation = 0.465869
shape = SubResource("RectangleShape2D_3k3q3")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="."]
position = Vector2(203, 28)
rotation = 0.465869
shape = SubResource("CircleShape2D_4xa3f")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(134.165, -47.6)
rotation = 1.17858
shape = SubResource("RectangleShape2D_vmetm")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="."]
position = Vector2(61.6113, -64.1326)
rotation = 0.460959
shape = SubResource("RectangleShape2D_kj35l")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="."]
position = Vector2(-340.371, 22.6508)
rotation = -0.310274
shape = SubResource("RectangleShape2D_5ig0e")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="."]
position = Vector2(-653.19, 168.841)
rotation = 1.31139
shape = SubResource("RectangleShape2D_erfoy")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="."]
position = Vector2(-519.5, 415.339)
rotation = 0.776859
shape = SubResource("RectangleShape2D_nfvlm")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="."]
position = Vector2(-56.1592, 479.845)
rotation = 0.970678
shape = SubResource("RectangleShape2D_c5iy0")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
position = Vector2(358.268, 316.862)
rotation = -0.451986
shape = SubResource("RectangleShape2D_4mwk4")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="."]
position = Vector2(-210, 527)
rotation = -0.390427
shape = SubResource("RectangleShape2D_hinx2")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="."]
position = Vector2(-345.664, 89.9225)
rotation = 0.629919
shape = SubResource("RectangleShape2D_w7uxn")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="."]
position = Vector2(-280, -20)
rotation = -0.312288
shape = SubResource("RectangleShape2D_blwbo")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="."]
position = Vector2(-363.682, 118.859)
rotation = 0.687384
shape = SubResource("RectangleShape2D_o616a")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="."]
position = Vector2(-253.22, 215.078)
rotation = 1.22921
shape = SubResource("RectangleShape2D_0mcfm")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="."]
position = Vector2(-217.786, 168.2)
rotation = -0.0260773
shape = SubResource("RectangleShape2D_bwt42")
